--- a/app/views/shared/_organized_skeleton.html.haml
+++ b/app/views/shared/_organized_skeleton.html.haml
@@ -1,6 +1,8 @@
+- show_overview_dashboard = (current_user.admin_of?(current_organization) || current_user.superuser?) && current_organization.overview_dashboard?
+- show_overview_dashboard = true if controller_name == "dashboard" && action_name == "index" # If viewing the dashboard, show the link
 %nav.organized-left-menu
   .organized-menu-wrapper
-    %header
+    %header{ class: show_overview_dashboard ? "with-dashboard-link" : "with-divider-below" }
       - if current_organization.display_avatar
         = image_tag current_organization.avatar.url(:medium)
       %h3
@@ -9,6 +11,9 @@
           = current_organization.name
 
     %ul.organized-mainmenu
+      - if show_overview_dashboard
+        %li.divider-below
+          = active_link t(".overview_dashboard"), organization_dashboard_index_path(organization_id: current_organization.to_param), class: "menu-item"
       - if current_organization.ambassador?
         %li
           = active_link passive_organization.short_name.to_s, organization_ambassador_dashboard_path, class: "menu-item"
@@ -73,9 +78,6 @@
             %span.disabled-menu-item.menu-item
               = t(".geomessaging")
         - if current_user.admin_of?(current_organization) || current_user.superuser?
-          - if current_organization.parent? || current_organization.regional?
-            %li
-              = active_link t(".organization_dashboard", org_name: current_organization.short_name), organization_dashboard_index_path(organization_id: current_organization.to_param), class: "menu-item"
           %li.divider-above
             = active_link t(".users"), organization_users_path(organization_id: current_organization.to_param), match_controller: true, class: "menu-item"
           %li
