--- a/app/views/landing_pages/_tweet.html.haml
+++ b/app/views/landing_pages/_tweet.html.haml
@@ -3,7 +3,7 @@
 
 - if tweet.present?
   .embeded-tweet
-    = image_tag tweet.image
+    = image_tag tweet.image_url if tweet.image?
     .tweet-display{ class: "tweet-align-#{tweet.alignment}" }
       %a.tweetor-header{ href: tweet.tweetor_link, target: '_blank' }
         = image_tag tweet.tweetor_avatar
