--- a/app/views/shared/_organized_skeleton.html.haml
+++ b/app/views/shared/_organized_skeleton.html.haml
@@ -63,6 +63,7 @@
         - if current_organization.paid_for?("csv_exports")
           %li
             = active_link t(".exports"), organization_exports_path(organization_id: current_organization.to_param), match_controller: true, class: "menu-item"
+
         - if current_organization.message_kinds.any?
           - current_organization.message_kinds.each_with_index do |message_kind, index|
             %li{ class: index == 0 ? "divider-above" : "" }
@@ -72,11 +73,13 @@
               - else
                 - link_title = message_kind.gsub("_messages", "").titleize
                 = active_link link_title, organization_messages_path(organization_id: current_organization.to_param, kind: message_kind), class: "menu-item"
-
         - else
           %li.divider-above
             %span.disabled-menu-item.menu-item
               = t(".geomessaging")
+        - if current_organization.paid_for?("abandoned_bikes")
+          %li
+            = active_link t(".abandoned_bikes"), organization_abandoned_records_path(organization_id: current_organization.to_param), class: "menu-item"
         - if current_user.admin_of?(current_organization) || current_user.superuser?
           %li.divider-above
             = active_link t(".users"), organization_users_path(organization_id: current_organization.to_param), match_controller: true, class: "menu-item"
