--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -52,14 +52,17 @@
                 - if passive_organization.paid_for?("impound_bikes")
                   %li
                     = link_to t(".org_impounded_bikes", org_name: passive_organization.short_name), organization_bikes_path(organization_id: passive_organization.to_param, search_impoundedness: "only_impounded"), class: "nav-link #{on_impound_bikes_path ? 'active' : ''}"
+                - if passive_organization.paid_for?("abandoned_bikes")
+                  %li
+                    = active_link t(".org_abandoned_bikes"), organization_abandoned_records_path(organization_id: passive_organization.to_param), class: "nav-link"
                 %li
-                  = active_link t(".add_a_bike"), new_organization_bike_path(passive_organization), class: "nav-link"
+                  = active_link t(".add_a_bike"), new_organization_bike_path(passive_organization.to_param), class: "nav-link"
                 - if passive_organization.paid_for?("show_partial_registrations")
                   %li
-                    = active_link t(".incomplete_registrations"), incompletes_organization_bikes_path(passive_organization), class: "nav-link"
+                    = active_link t(".incomplete_registrations"), incompletes_organization_bikes_path(passive_organization.to_param), class: "nav-link"
                 - if passive_organization.paid_for?("show_recoveries") # I don't want to show a grayed link for this
                   %li
-                    = active_link t(".recoveries"), recoveries_organization_bikes_path(passive_organization), class: "nav-link"
+                    = active_link t(".recoveries"), recoveries_organization_bikes_path(passive_organization.to_param), class: "nav-link"
 
                 - if passive_organization.show_bulk_import?
                   %li
