now just need to click test

--- a/app/views/organized/abandoned_records/index.html.haml
+++ b/app/views/organized/abandoned_records/index.html.haml
@@ -1,7 +1,7 @@
 - # TODO: organized translation
 
 .organized-page-header
-  %h1 Abandoned Records
+  %h1= t(".abandoned_records")
 
 .organized-messages
   #map
