--- a/app/views/organized/abandoned_records/show.html.haml
+++ b/app/views/organized/abandoned_records/show.html.haml
@@ -1,47 +1,28 @@
 .organized-page-header
   %h1
     %em= current_organization.name
-    = t(".organization_message", org_kind: @organization_message.kind.titleize)
+    = t(".abandoned_record")
 
 %table.table-list
   %tbody
     %tr
-      %td= t(".created")
+      %td= t(".recorded")
       %td
         %span.convertTime
-          = l(@organization_message.created_at, format: :convert_time)
-
+          = l(@abandoned_record.created_at, format: :convert_time)
     %tr
-      %td= t(".delivered")
-      %td
-        - if @organization_message.delivery_status == "success"
-          %span.text-success= t(".success")
-        - elsif @organization_message.delivery_status.blank?
-          %em.text-warning= t(".pending_delivery")
-        - else
-          %span.text-danger
-            = @organization_message.delivery_status
-
-    %tr
-      %td= t(".sender")
-      %td= @organization_message.sender.display_name
+      %td= t(".recorder")
+      %td= @abandoned_record.user.display_name
     %tr
       %td= t(".bike")
       %td
         - if @bike.present?
           = link_to organized_bike_text(@bike), bike_path(@bike)
-
-    %tr
-      %td= t(".subject")
-      - org_name = @organization_message.organization.short_name
-      - mnfg_name = @organization_message.bike.mnfg_name
-      %td= t("organized_mailer.custom_message.subject", org_name: org_name, mnfg_name: mnfg_name)
-
     %tr
       %td= t(".additional_text")
       %td
-        - if @organization_message.body.present?
-          = @organization_message.body
+        - if @abandoned_record.notes.present?
+          = @abandoned_record.notes
         - else
           %em.less-strong= t(".none")
 
@@ -55,7 +36,7 @@
   <script type="text/javascript">
     var map;
     function initialize() {
-      var center = new google.maps.LatLng(#{@organization_message.latitude}, #{@organization_message.longitude});
+      var center = new google.maps.LatLng(#{@abandoned_record.latitude}, #{@abandoned_record.longitude});
       var myOptions = {
         zoom: 13,
         center: center,
@@ -64,7 +45,7 @@
       map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
 
       new google.maps.Marker({
-        position: new google.maps.LatLng(#{@organization_message.latitude}, #{@organization_message.longitude}),
+        position: new google.maps.LatLng(#{@abandoned_record.latitude}, #{@abandoned_record.longitude}),
         map: map
       });
     }
