--- a/app/assets/stylesheets/revised/pages/bikes/show.scss
+++ b/app/assets/stylesheets/revised/pages/bikes/show.scss
@@ -144,7 +144,9 @@
         margin-bottom: 0.5rem;
       }
     }
-
+    .abandoned-record-wrap {
+      padding: 0 15px 8px;
+    }
     .organized-actions-wrap {
       padding: 8px 15px;
       background: #fdfdfd;
