--- a/app/views/organized/abandoned_records/index.html.haml
+++ b/app/views/organized/abandoned_records/index.html.haml
@@ -16,8 +16,10 @@
       %th
         Recorded
         %small.convertTimezone
+      %th Kind
       %th Bike
       %th Sender
+      %th Impounded
     %tbody
 
 :javascript
