Finished parity with geomessages

--- a/app/assets/stylesheets/revised/pages/organized/messages_and_abandoned.scss
+++ b/app/assets/stylesheets/revised/pages/organized/messages_and_abandoned.scss
@@ -17,8 +17,7 @@
     display: none;
   }
 
-  #messages_table,
-  #records_table {
+  .list-table {
     .map-cell {
       display: table-cell;
       padding: 0;
