--- a/app/views/organized/abandoned_records/index.html.haml
+++ b/app/views/organized/abandoned_records/index.html.haml
@@ -10,14 +10,14 @@
     %span.number 0
     Matches
 
-  %table.table.table-striped.table-hover.table-bordered.table-sm.without-exterior-border#records_table
+  %table.table.table-striped.table-hover.table-bordered.table-sm.without-exterior-border.list-table#records_table
     %thead.small-header.hidden-md-down
       %th.map-cell
       %th
         Recorded
         %small.convertTimezone
-      %th Kind
       %th Bike
+      %th Kind
       %th Recorder
       %th Impounded
     %tbody
