--- a/app/views/organized/messages/index.html.haml
+++ b/app/views/organized/messages/index.html.haml
@@ -8,7 +8,7 @@
     %span.number 0
     = t(".matches")
 
-  %table.table.table-striped.table-hover.table-bordered.table-sm.without-exterior-border#messages_table
+  %table.table.table-striped.table-hover.table-bordered.table-sm.without-exterior-border.list-table#messages_table
     %thead.small-header.hidden-md-down
       %th.map-cell
       %th
