--- a/app/assets/stylesheets/revised/pages/organized/messages_and_abandoned.scss
+++ b/app/assets/stylesheets/revised/pages/organized/messages_and_abandoned.scss
@@ -1,11 +1,13 @@
-.organized-messages {
+// NOTES: "messages" should be renamed to "records", since that is generic and will work for both
+.organized-messages,
+.organized-records {
   #map {
     width: 100%;
     height: 400px;
     margin-bottom: 4 * $vertical-height;
   }
 
-  // messages table rows are rendered when you click on a point on the map too - only show the map link when on the table
+  // table rows are rendered when you click on a point on the map too - only show the map link when on the table
   .map-cell {
     display: none;
   }
@@ -15,7 +17,7 @@
     display: none;
   }
 
-  #messages_table {
+  .list-table {
     .map-cell {
       display: table-cell;
       padding: 0;
