--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -4,7 +4,7 @@
     = header_tags
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,300italic,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-    = javascript_pack_tag "admin_application"
+    = javascript_pack_tag "application_standalone"
     = stylesheet_pack_tag "application_css"
 
   / manually override body_class in a few situations :/
