--- a/app/views/organized/abandoned_records/index.html.haml
+++ b/app/views/organized/abandoned_records/index.html.haml
@@ -4,9 +4,25 @@
 .organized-records
   #map
 
+  - # TODO: add translations
+
+  = pluralize number_with_delimiter(matching_abandoned_records.count), "Abandoned record"
+
+  - if search_params_present?
+    - if params[:search_bike_id].present?
+      for
+      - searched_bike = Bike.find_by_id(params[:search_bike_id])
+      - if searched_bike.present?
+        = link_to searched_bike.title_string, bike_path(searched_bike)
+      - else
+        %em
+          unknown bike ##{params[:search_bike_id]}
+  - else
+    %h3 TOTAL
+
   %p#recordsCount.text-right.less-strong
     %span.number 0
-    = t(".matches")
+    = t(".matches_visible")
 
 
   %table.table.table-striped.table-hover.table-bordered.table-sm.without-exterior-border.list-table#records_table
