add some additions

--- a/app/views/organized/abandoned_records/index.html.haml
+++ b/app/views/organized/abandoned_records/index.html.haml
@@ -6,6 +6,9 @@
 
   - # TODO: add translations
   .row
+    .col-xs-12.text-center
+      = link_to "record unregistered abandoned bike", new_organization_bike_path(organization_id: current_organization, kind: "abandoned")
+
     .col-md-8
       = pluralize number_with_delimiter(matching_abandoned_records.count), "Abandoned record"
 
