--- a/app/views/organized/bikes/new.html.haml
+++ b/app/views/organized/bikes/new.html.haml
@@ -1,2 +1,5 @@
-- iframe_url = embed_extended_organization_url(current_organization.slug)
+- if @kind == "abandoned"
+  - iframe_url = new_iframe_organization_bikes_path(organization_id: current_organization)
+- else
+  - iframe_url = embed_extended_organization_url(current_organization.slug)
 <iframe src="#{iframe_url}"></iframe>
