Fix nil method call exception
A stolen bike occasionally has no current_stolen_record and L33 will raise an
exception in that case. We could alternatively / additionally save the bike
record to ensure an available CSR is set before checking
@bike.current_stolen_record.present?

--- a/app/views/shared/_email_bike_box.html.haml
+++ b/app/views/shared/_email_bike_box.html.haml
@@ -25,7 +25,7 @@
         = pluralize(@bike.frame_colors.count, t(".color"))
       = @bike.frame_colors.to_sentence
 
-    - if @bike.stolen
+    - if @bike.stolen && @bike.current_stolen_record.present?
       - stolen_record = @bike.current_stolen_record
       %li
         %strong
