--- a/app/views/organized/bikes/recoveries.html.haml
+++ b/app/views/organized/bikes/recoveries.html.haml
@@ -1,47 +1,61 @@
 .mb-4
-  %h1= t(".org_recoveries_html", org_name: current_organization.name)
 
-  %p
-    %strong
-      = pluralize(@recoveries.total_count, t(".recovery"))
+%h1= t(".org_recoveries_html", org_name: current_organization.name)
 
-  %table.table.table-striped.table-hover.table-bordered.table-sm.without-exterior-border.table-compact-long
-    %thead.small-header
-      %tr
-        %th.date-added= t(".recovered_at")
-        %th= t(".description")
-        %th= t(".mfg_model_color_html")
+/ = column_chart organization_dashboard_bikes_graph_data, stacked: true, thousands: ",", defer: true, colors: ["#5cb85c", "#3498db"]
+
+%div{ style: "margin-top: 50px;" }
+  - if current_organization.regional?
+    %a.btn.btn-outline-primary.btn-sm.period-select-standard{ href: recoveries_organization_bikes_path(sortable_search_params.merge(search_only_organization: !@search_only_organization)) class: ("active" if @search_only_organization) }
+      = t(".show_only_organization_recoveries", org_short_name: current_organization.short_name)
+  = render partial: "/shared/period_select"
+
+%p
+  %strong
+    = pluralize(@recoveries.total_count, t(".recovery"))
+    = humanized_time_range(@time_range)
+
+%table.table.table-striped.table-hover.table-bordered.table-sm.without-exterior-border.table-compact-long
+  %thead.small-header
+    %tr
+      %th.date-added= t(".recovered_at")
+      %th= t(".description")
+      %th= t(".mfg_model_color_html")
+      - if @search_only_organization
         %th= t(".owner")
 
-    %tbody
-      - display_recovery_ids = current_user.superuser?
-      - @recoveries.each do |recovered_record|
-        - bike = recovered_record.bike
-        %tr
-          %td
-            - if recovered_record.recovered_at.present?
-              %a.convertTime{ href: bike_path(bike) }
-                = l recovered_record.recovered_at, format: :convert_time
-            - if display_recovery_ids
-              %small.less-strong
-                = recovered_record.id
-          %td.hidden-xs-down
-            - recovery_display = recovered_record.recovery_display
-            - if recovery_display && recovery_display.quote.present?
-              %small
-                = recovery_display.quote
-            - else
-              %em
-                %small
-
-          %td
+  %tbody
+    - display_recovery_ids = current_user.superuser?
+    - @recoveries.each do |recovered_record|
+      - bike = recovered_record.bike
+      %tr
+        %td
+          - if recovered_record.recovered_at.present?
+            %a.convertTime{ href: bike_path(bike) }
+              = l recovered_record.recovered_at, format: :convert_time
+          - if display_recovery_ids
+            %small.less-strong
+              = recovered_record.id
+        %td.hidden-xs-down
+          - recovery_display = recovered_record.recovery_display
+          - if recovery_display && recovery_display.quote.present?
             %small
-              = [bike.mnfg_name, bike.frame_model].select(&:present?).join(", ")
-              %span.less-strong
-                = bike.frame_colors.to_sentence
+              = recovery_display.quote
+          - else
+            %em
+              %small
+
+        %td
+          %small
+            = [bike.mnfg_name, bike.frame_model].select(&:present?).join(", ")
+            %span.less-strong
+              = bike.frame_colors.to_sentence
+        - if @search_only_organization
           %td
             %small
               = bike.owner_email
 
 .paginate-container.paginate-container-bottom
   = paginate @recoveries
+
+= javascript_pack_tag "application"
