--- a/app/views/organized/bikes/recoveries.html.haml
+++ b/app/views/organized/bikes/recoveries.html.haml
@@ -2,12 +2,15 @@
 
 %h1= t(".org_recoveries_html", org_name: current_organization.name)
 
-/ = column_chart organization_dashboard_bikes_graph_data, stacked: true, thousands: ",", defer: true, colors: ["#5cb85c", "#3498db"]
+- if @render_chart
+  = column_chart time_range_counts(collection: @matching_recoveries, column: "stolen_records.recovered_at"), stacked: true, thousands: ",", defer: true
 
-%div{ style: "margin-top: 50px;" }
+.mb-2{ style: "margin-top: 50px;" }
   - if current_organization.regional?
-    %a.btn.btn-outline-primary.btn-sm.period-select-standard{ href: recoveries_organization_bikes_path(sortable_search_params.merge(search_only_organization: !@search_only_organization)) class: ("active" if @search_only_organization) }
+    %a.btn.btn-outline-primary.btn-sm.period-select-standard{ href: recoveries_organization_bikes_path(sortable_search_params.merge(search_only_organization: !@search_only_organization)), class: ("active" if @search_only_organization) }
       = t(".show_only_organization_recoveries", org_short_name: current_organization.short_name)
+  %a.btn.btn-outline-primary.btn-sm.period-select-standard{ href: recoveries_organization_bikes_path(sortable_search_params.merge(render_chart: !@render_chart)), class: ("active" if @render_chart) }
+    = t(".render_chart")
   = render partial: "/shared/period_select"
 
 %p
@@ -15,11 +18,13 @@
     = pluralize(@recoveries.total_count, t(".recovery"))
     = humanized_time_range(@time_range)
 
+-# Calculating nearby recoveries is an expensive operation. Maybe don't do it
+/ - if @search_only_organization
 %table.table.table-striped.table-hover.table-bordered.table-sm.without-exterior-border.table-compact-long
   %thead.small-header
     %tr
       %th.date-added= t(".recovered_at")
-      %th= t(".description")
+      %th.hidden-xs-down= t(".description")
       %th= t(".mfg_model_color_html")
       - if @search_only_organization
         %th= t(".owner")
