--- a/app/assets/stylesheets/revised/pages/organized/_bikes.scss
+++ b/app/assets/stylesheets/revised/pages/organized/_bikes.scss
@@ -48,3 +48,10 @@
     border: none;
   }
 }
+
+// Fix little issue with button underlines
+.organized-body {
+  .active.btn.btn-outline-primary {
+    text-decoration: none;
+  }
+}
